# codeupipe-marketplace

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  build_contributors.py  index.json  schema.json  validate.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: new-component.yml
.github/workflows/: pages.yml  publish.yml  validate.yml
_template/: manifest.json
components/codeupipe-google-ai/: README.md  manifest.json  pyproject.toml
components/codeupipe-google-ai/codeupipe_google_ai/: __init__.py  embed.py  generate.py  generate_stream.py  vision.py
components/codeupipe-postgres/: README.md  manifest.json  pyproject.toml
components/codeupipe-postgres/codeupipe_postgres/: __init__.py  bulk_insert.py  execute.py  query.py  transaction.py
components/codeupipe-resend/: README.md  manifest.json  pyproject.toml
components/codeupipe-resend/codeupipe_resend/: __init__.py  email.py  template.py
components/codeupipe-stripe/: README.md  manifest.json  pyproject.toml
components/codeupipe-stripe/codeupipe_stripe/: __init__.py  checkout.py  customer.py  subscription.py  webhook.py
site/: index.html  index.json
