[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "codeupipe-resend"
version = "0.1.0"
description = "Resend transactional email and template rendering for codeupipe pipelines"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [{name = "codeuchain"}]
dependencies = ["codeupipe>=0.8.0", "resend>=0.7.0"]

[project.urls]
Homepage = "https://github.com/codeuchain/codeupipe-marketplace"
Repository = "https://github.com/codeuchain/codeupipe-marketplace"
